--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,10 @@ dev_dependencies:
   flutter_lints: ^1.0.0
   mask_text_input_formatter: ^2.1.0
   validatorless: ^1.2.1
+  cloud_firestore: ^3.1.8
+  firebase_auth: ^3.3.7
+  firebase_core: ^1.12.0
+  
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
