--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dev_dependencies:
   cloud_firestore: ^3.1.8
   firebase_auth: ^3.3.7
   firebase_core: ^1.12.0
+  localstore: ^1.2.1
   
 
 # For information on the generic Dart part of this file, see the
