--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dev_dependencies:
   firebase_auth: ^3.3.7
   firebase_core: ^1.12.0
   localstore: ^1.2.1
+  flutter_typeahead: ^3.2.4
   
 
 # For information on the generic Dart part of this file, see the
